# ResumeBuilder

./: .gitignore  README.md  docker-compose.yml  docker.txt  docker_commands.txt  example.env  icons.json  new.php  package.json
FastApiBackend/: Dockerfile  README.md  alembic.ini  example.alembic.ini  example.env  pyproject.toml  requirements.txt
FastApiBackend/alembic/: env.py
FastApiBackend/alembic/versions/: 2dad3a67a65a_init.py  4bb65d7f6e78_database_initialization.py  6d3622f98472_init.py  8a0450da011f_database_restructure.py  d831523e4320_init.py  f61d54d67775_projects_table_update.py
FastApiBackend/app/: __init__.py  main.py
FastApiBackend/app/core/: config.py  db.py  models.py
FastApiBackend/app/helpers/DataValidations/: user_endpoint.py
FastApiBackend/app/helpers/database/: alembic_migrations.py  dummy_data.py
FastApiBackend/app/helpers/services/: user_endpoint.py
FastApiBackend/app/routers/: certification.py  education.py  experience.py  language.py  profile.py  project.py  referee.py  user_contact.py  users.py
FastApiBackend/app/v1/: v1_router.py
FastApiBackend/app/v1/database/dummy_data/: data.py  loader.py
FastApiBackend/app/v1/database/models/: certification_model.py  education_model.py  experience_model.py  health_status_model.py  language_model.py  profile_model.py  project_model.py  referee_model.py  user_model.py  (+1 more)
FastApiBackend/app/v1/routers/: certification_router.py  education_router.py  experience_router.py  language_router.py  profile_router.py  project_router.py  referee_router.py  user_router.py  verification_router.py
(+187 files in other folders)
